[package]
edition = "2021"
name    = "firmware"
version = "0.1.0"
license = "GPL-3.0-only"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
async-trait = "0.1"
embassy-executor = { version = "0.7", features = ["task-arena-size-40960"] }
embassy-futures = "0.1"
embassy-sync = "0.6"
embassy-time = "0.4"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.7", features = ["esp32c3", "log"] }
esp-println = { version = "0.13", features = ["esp32c3", "log"] }
log = "0.4"
micromath = "2.1"

[patch.crates-io]
esp-hal = { git = "https://github.com/cdbfoster/esp-hal.git" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
lto  = 'fat'
opt-level = 's'
overflow-checks = false
